# dedent

./: .gitignore  LICENSE.md  README.md  Taskfile.yaml  pyproject.toml
.github/workflows/: check.yaml  publish.yml  release.yaml
src/dedent/: __init__.py  _aligned.py  _compat.py  _core.py  _dedent.py
tests/: conftest.py  test_align.py  test_dedent.py
tests/__snapshots__/: test_dedent.ambr
